@@ -1,0 +1,26 @@
+#compdef archpkg
+# ==============================================================================
+# Completion for archpkg
+# ==============================================================================
+local -a options
+
+options=(
+  'help:显示帮助'
+  'update:更新软件仓库'
+  'check-updates:检查更新'
+  'upgrade-all:更新系统'
+  'clean-system:清理不被依赖的包和旧的缓存'
+  'install:安装软件包'
+  'reinstall:重新安装软件包'
+  'remove:卸载软件包'
+  'download:下载软件包但不安装'
+  'info:打印软件包信息'
+  'search:查找软件包'
+  'file-search:显示某文件属于哪个包'
+  'generate-template:生成包含软件包列表的模板文件'
+  'install-template:安装模板文件中记录的所有软件包'
+  'remove-template:删除模板文件中记录的所有软件包(永远不要使用!)'
+)
+
+_describe 'values' options
+
