@@ -1,3 +1,8 @@
+v2015-11-05.2
+  * zsh:
+      增加了ssh-env 和archpkg 的自动补全
+      增加了groot 指令
+
 v2015-11-05
   * git:
       现在git 配置不会被安装了
